Fixed spacing issue.

--- a/test.css
+++ b/test.css
@@ -4,7 +4,7 @@ body {
 
 h2{
   font-family: Roboto;
-  margin-top:5%;
+  margin-top: 50px;
   margin-left: 10%;
 }
 
